# Python_WEB_DZ_8_part_2

./: README.md  consumer.py  model.py  producer.py  pyproject.toml
