[tool.poetry]
name = "hw-8-part-2"
version = "0.1.0"
description = ""
authors = ["MAX"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
faker = "^22.5.0"
pika = "^1.3.2"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
